[gd_scene load_steps=17 format=2]

[ext_resource path="res://character/player_sprite.png" type="Texture" id=1]
[ext_resource path="res://character/player.gd" type="Script" id=2]
[ext_resource path="res://character/states/state_machine.gd" type="Script" id=3]
[ext_resource path="res://character/states/run.gd" type="Script" id=4]
[ext_resource path="res://character/states/idle.gd" type="Script" id=5]
[ext_resource path="res://character/states/air.gd" type="Script" id=6]
[ext_resource path="res://character/AnimationPlayer.gd" type="Script" id=7]
[ext_resource path="res://character/throw_direction.gd" type="Script" id=8]
[ext_resource path="res://character/throw.gd" type="Script" id=9]
[ext_resource path="res://sfx/jump.mp3" type="AudioStream" id=10]
[ext_resource path="res://sfx/throw.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 26 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Direction/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 0.9, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 0, 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "in_air"
length = 0.375
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Direction/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38 ]
}

[sub_resource type="Animation" id=4]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Direction/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 12, 23 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Direction/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "resume"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine/Throw/ThrowSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( -32, -32 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="Direction" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Direction"]
texture = ExtResource( 1 )
hframes = 12
vframes = 4
frame = 27

[node name="PlacePosition" type="Position2D" parent="Direction"]
position = Vector2( 64, 0 )

[node name="ThrowPosition" type="Position2D" parent="Direction"]
position = Vector2( 32, 0 )
script = ExtResource( 8 )

[node name="DetectHoop" type="RayCast2D" parent="Direction"]
visible = false
position = Vector2( 64, -56 )
enabled = true
cast_to = Vector2( 0, 160 )
collision_mask = 8
collide_with_areas = true

[node name="DetectUnderneath" type="RayCast2D" parent="Direction"]
position = Vector2( 64, 0 )
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 9
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Throw" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="ThrowSound" type="AudioStreamPlayer" parent="StateMachine/Throw"]
stream = ExtResource( 11 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="JumpSoundPlayer" type="AudioStreamPlayer" parent="StateMachine/Air"]
stream = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/in_air = SubResource( 3 )
anims/run = SubResource( 4 )
anims/throw = SubResource( 5 )
script = ExtResource( 7 )

[node name="PlaceSound" type="AudioStreamPlayer" parent="."]

[node name="OnGround" type="RayCast2D" parent="."]
position = Vector2( 0, 16 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 9
